# climate_forecasting

./: .gitignore  README.md  config.yaml  pyproject.toml
scripts/: eda.py
src/climate_forecasting/: config.py  model.py
