[project]
name = "climate-forecasting"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    {name = "Rob Ellis", email = "robandrewells@gmail.com"},
]
requires-python = ">=3.12"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
packages = ["src/climate-forecasting"]

[dependency-groups]
dev = [
    "hydra-core>=1.3.2",
    "pre-commit>=4.0.1",
    "pydantic>=2.10.4",
    "ruff>=0.8.4",
]

[tool.ruff]
line-length = 79

[tool.ruff.lint]
select = ["D101", "D102", "D103"]

[tool.ruff.lint.pydocstyle]
convention = "google"
